[package]
name = "live-view-chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = "0.11"
submillisecond = "0.2.0-beta0"
submillisecond-live-view = "0.1"
maud-live-view = "0.24"
serde = "1.0"
serde_json = "1.0"